--- a/public/about.html
+++ b/public/about.html
@@ -18,7 +18,7 @@
       <div class="content">
         <div class="offline">
           <h1>About</h1>
-          <h2>WebToDesk v2.0.0</h2>
+          <h2>PanduElectronv2.0.0</h2>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         </div>
         <div class="button_cont" id="tryagain"><a class="btn_reload">Home Page</a></div>
